--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -281,6 +281,7 @@ jobs:
       - lint
       - documentation
       - build-and-test
+      - publish-github
     if: ${{startsWith(github.ref, 'refs/tags/')}}
     runs-on: ubuntu-latest
     steps:
