--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -240,7 +240,7 @@ jobs:
           name: tvrank-${{steps.tag.outputs.tag}}-windows.zip
 
       - name: Create Release on Github
-        id: create_release
+        id: create-release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
@@ -254,7 +254,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
-          upload_url: ${{steps.create_release.outputs.upload_url}}
+          upload_url: ${{steps.create-release.outputs.upload_url}}
           asset_path: tvrank-${{steps.tag.outputs.tag}}-linux.tar.bz2
           asset_name: tvrank-${{steps.tag.outputs.tag}}-linux.tar.bz2
           asset_content_type: application/x-bzip2
@@ -264,7 +264,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
-          upload_url: ${{steps.create_release.outputs.upload_url}}
+          upload_url: ${{steps.create-release.outputs.upload_url}}
           asset_path: tvrank-${{steps.tag.outputs.tag}}-macos.dmg
           asset_name: tvrank-${{steps.tag.outputs.tag}}-macos.dmg
           asset_content_type: application/x-apple-diskimage
@@ -274,7 +274,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
-          upload_url: ${{steps.create_release.outputs.upload_url}}
+          upload_url: ${{steps.create-release.outputs.upload_url}}
           asset_path: tvrank-${{steps.tag.outputs.tag}}-windows.zip
           asset_name: tvrank-${{steps.tag.outputs.tag}}-windows.zip
           asset_content_type: application/zip
