--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,50 +12,15 @@ keywords = ["tv", "series", "movies", "imdb", "rank"]
 categories = ["caching", "command-line-utilities", "filesystem", "multimedia::video", "parsing"]
 exclude = ["/attic", "/.github", "/.gitignore", "/screencasts", "/screenshots"]
 
-[lib]
-name = "tvrank"
-path = "src/lib.rs"
+[workspace]
+members = ["utils", "imdb", "cli"]
+default-members = ["utils", "imdb", "cli"]
 
-[[bin]]
-name = "tvrank"
-path = "src/main.rs"
-
-[dependencies]
-env_logger = "0.8"
-log = "0.4"
-clap = { version = "3.1", features = ["derive"] }
-derive_more = "0.99"
-# derive-new = "0.5"
-enum-utils = "0.1"
-serde = { version = "1.0", features = ["derive"] }
-# serde_with = "1.9"
-serde_json = "1.0"
-serde_yaml = "0.8"
-csv = "1.1"
-regex = "1.5"
-directories = "3.0"
-# memmap = "0.7"
-flate2 = "1.0"
-reqwest = { version = "0.11", features = ["blocking"] }
-atoi = "0.4"
-fnv = "1.0"
-# num_cpus = "1.13"
-# crossbeam = "0.8"
-parking_lot = "0.11"
+[dev-dependencies]
+tvrank-utils = { path = "utils" }
+tvrank-imdb = { path = "imdb" }
 humantime = "2.1"
-prettytable-rs = "0.8"
-# titlecase = "1.1"
-indicatif = "0.16"
-walkdir = "2.3"
-tempfile = "3.2"
-# deepsize = "0.2"
-# bitvec = "0.22"
-rayon = "1.5"
-# tokio = { version = "1.14", features = ["rt-multi-thread", "macros"] }
-aho-corasick = "0.7"
-deunicode = "1.3"
-indoc = "1.0"
-truncatable = "0.1"
+tempfile = "3.3"
 
 [profile.release]
 debug = false
