--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -324,5 +324,6 @@ jobs:
       - name: Publish to Crates.io
         env:
           CRATES_IO_TOKEN: ${{secrets.CRATES_IO_TOKEN}}
-        run: cargo publish --token ${CRATES_IO_TOKEN}
+        run: cargo publish -p tvrank --token ${CRATES_IO_TOKEN}
+        run: cargo publish -p tvrank-cli --token ${CRATES_IO_TOKEN}
 ...
