Fix the library being published but the binary errors

--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -326,5 +326,6 @@ jobs:
           CRATES_IO_TOKEN: ${{secrets.CRATES_IO_TOKEN}}
         run: |
           cargo publish -p tvrank --token ${CRATES_IO_TOKEN}
+          sleep 5  # Gives crates.io time to update itself or whatever
           cargo publish -p tvrank-cli --token ${CRATES_IO_TOKEN}
 ...
