--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -19,7 +19,7 @@ aho-corasick = "0.7"
 derive_more = "0.99"
 deunicode = "1.3"
 fnv = "1.0"
-reqwest = { version = "0.11", features = ["blocking"] }
+reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
 rayon = "1.5"
 atoi = "1.0"
 serde = { version = "1.0", features = ["derive"] }
