VScode settings updates
Co-authored-by: Koushik Meenakshisundaram <koushik.ms@gmail.com>
Co-authored-by: Henning Holm <git@henningholm.de>
Co-authored-by: Vaishali <VAISHALI.DHANOA@gmail.com>
Co-authored-by: Olsi Bakullari <obakullari@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,14 +2,14 @@
     "redhat.telemetry.enabled": true,
     "gitpod.openInStable.neverPrompt": true,
     "rust-analyzer.checkOnSave.command": "clippy",
-    "rust-analyzer.inlayHints.closureReturnTypeHints": true,
     "rust-analyzer.inlayHints.lifetimeElisionHints": "always",
     "rust-analyzer.inlayHints.lifetimeElisionHints.useParameterNames": false,
-    "rust-analyzer.inlayHints.reborrowHints": true,
-    "rust-analyzer.assist.allowMergingIntoGlobImports": false,
-    "rust-analyzer.assist.importGroup": false,
     "rust-analyzer.cargo.allFeatures": true,
     "rust-analyzer.lens.methodReferences": true,
     "rust-analyzer.lens.references": true,
-    "rust-analyzer.lens.enumVariantReferences": true
+    "rust-analyzer.lens.enumVariantReferences": true,
+    "rust-analyzer.imports.merge.glob": false,
+    "rust-analyzer.imports.group.enable": false,
+    "rust-analyzer.inlayHints.closureReturnTypeHints.enable": true,
+    "rust-analyzer.inlayHints.reborrowHints.enable": true
 }
