--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -33,3 +33,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
 prettytable-rs = "0.10"
+url = "2.2"
+thiserror = "1.0"
