--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -23,7 +23,7 @@ atoi = "2.0"
 clap = { version = "4", features = ["derive"] }
 env_logger = "0.10"
 derive_more = "0.99"
-reqwest = { version = "0.12", features = ["blocking"] }
+reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
 walkdir = "2.3"
 regex = "1.5"
 humantime = "2.1"
