--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -16,7 +16,7 @@ path = "src/lib.rs"
 
 [dependencies]
 aho-corasick = "0.7"
-derive_more = "0.99"
+derive_more = { version = "2.0", features = ["display", "from", "into"] }
 deunicode = "1.3"
 fnv = "1.0"
 reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
